--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         <div class="imagem-card">
                             <img src="assets/tinto/Destaque-tinto.png" alt="Tinto"> <!-- Imagem do produto em destaque com descrição alternativa "Tinto" -->
                         </div>
-                        <div class="descricao-card">
-                            <h2>Preto</h2> <!-- Título do card do produto, descrevendo o nome do produto -->
+                        <div class="descricao-card" >
+                            <h2>Tinto</h2> <!-- Título do card do produto, descrevendo o nome do produto -->
                         </div>
                     </div>
                     <div class="item"> <!-- Card individual de outro produto em destaque -->
@@ -56,7 +56,7 @@
                             <img src="assets/rose/Destaque-rose.png" alt="Rose"> <!-- Imagem do produto com descrição alternativa "Rose" -->
                         </div>
                         <div class="descricao-card">
-                            <h2>Vermelho</h2> <!-- Título do card do produto -->
+                            <h2>Rose</h2> <!-- Título do card do produto -->
                         </div>
                     </div>
                     <div class="item"> <!-- Card individual para mais um produto em destaque -->
@@ -64,7 +64,7 @@
                             <img src="assets/branco/Destaque-branco.png" alt="Branco"> <!-- Imagem do produto com descrição alternativa "Branco" -->
                         </div>
                         <div class="descricao-card">
-                            <h2>Azul</h2> <!-- Título do card do produto -->
+                            <h2>Branco</h2> <!-- Título do card do produto -->
                         </div>
                     </div>
                 </div>
@@ -72,6 +72,7 @@
         </div>
 
         <section class="produtos-gerais"> <!-- Seção contendo produtos gerais organizados em categorias -->
+            <h1 class="titulo-categoria">Vinhos Tinto</h1>
             <div class="card-container" id="tinto"> <!-- Contêiner para produtos da categoria "Tinto", com id "tinto" -->
                 <div class="card-item"> <!-- Card de produto individual na categoria "Tinto" -->
                     <div class="card-image">
@@ -97,36 +98,38 @@
                     </div>
                     <h2 class="card-title">Vinho Tinto</h2><!-- Título do card de produto -->
                 </div>
+            </div>      
+
+            <h1 class="titulo-categoria">Vinhos Rose</h1>
+            <div class="card-container" id="rose">
+                <div class="card-item">
+                    <div class="card-image">
+                        <img src="assets/01.png" alt="Vinho Rose">
+                    </div>
+                    <h2 class="card-title">Vinho Rose</h2>
+                </div>
+                <div class="card-item">
+                    <div class="card-image">
+                        <img src="assets/01.png" alt="Vinho Rose">
+                    </div>
+                    <h2 class="card-title">Vinho Rose</h2>
+                </div>
+                <div class="card-item">
+                    <div class="card-image">
+                        <img src="assets/01.png" alt="Vinho Rose">
+                    </div>
+                    <h2 class="card-title">Vinho Rose</h2>
+                </div>
+                <div class="card-item">
+                    <div class="card-image">
+                        <img src="assets/01.png" alt="Vinho Rose">
+                    </div>
+                    <h2 class="card-title">Vinho Rose</h2>
+                </div>
             </div>
 
-            <div class="card-container" id="Rose">
-                <div class="card-item">
-                    <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
-                    </div>
-                    <h2 class="card-title">Vinho Rose</h2>
-                </div>
-                <div class="card-item">
-                    <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
-                    </div>
-                    <h2 class="card-title">Vinho Rose</h2>
-                </div>
-                <div class="card-item">
-                    <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
-                    </div>
-                    <h2 class="card-title">Vinho Rose</h2>
-                </div>
-                <div class="card-item">
-                    <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
-                    </div>
-                    <h2 class="card-title">Vinho Rose</h2>
-                </div>
-            </div>
-
-            <div class="card-container" id="Vinho Branco">
+            <h1 class="titulo-categoria">Vinhos Branco</h1>
+            <div class="card-container" id="branco">
                 <div class="card-item">
                     <div class="card-image">
                         <img src="assets/01.png" alt="Vinho Branco">
