fonte adicionada e correção de padding

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="playfair.css"> <!-- Importa o arquivo CSS para estilizar fontes Playfair -->
     <link rel="stylesheet" href="style/styles.css"> <!-- Importa o CSS principal de estilo da página -->
     <link rel="stylesheet" href="style/avatar.css"> <!-- Importa o CSS para estilizar o avatar do usuário -->
-    <link rel="stylesheet" href="style/roboto.css"> <!-- Importa o CSS para estilizar fontes Roboto -->
+    <link rel="stylesheet" href="style/fontes.css"> <!-- Importa o CSS para estilizar fontes Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Otimiza a conexão para carregar fontes do Google -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> <!-- Importa a fonte Roboto diretamente do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet"> <!-- Importa a fonte Roboto diretamente do Google Fonts -->
     <title>Vinhos.net</title> <!-- Define o título da página exibido na aba do navegador -->
 </head>
 <body class="roboto-regular"> <!-- Início do corpo da página, aplicando a classe "roboto-regular" para estilização com a fonte Roboto -->
@@ -72,7 +72,7 @@
         </div>
 
         <section class="produtos-gerais"> <!-- Seção contendo produtos gerais organizados em categorias -->
-            <h1 class="titulo-categoria">Vinhos Tinto</h1>
+            <h1 class="titulo-categoria tangerine" id="padding-corretor">Vinhos Tinto</h1>
             <div class="card-container" id="tinto"> <!-- Contêiner para produtos da categoria "Tinto", com id "tinto" -->
                 <div class="card-item"> <!-- Card de produto individual na categoria "Tinto" -->
                     <div class="card-image">
@@ -100,7 +100,7 @@
                 </div>
             </div>      
 
-            <h1 class="titulo-categoria">Vinhos Rose</h1>
+            <h1 class="titulo-categoria tangerine">Vinhos Rose</h1>
             <div class="card-container" id="rose">
                 <div class="card-item">
                     <div class="card-image">
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <h1 class="titulo-categoria">Vinhos Branco</h1>
+            <h1 class="titulo-categoria tangerine">Vinhos Branco</h1>
             <div class="card-container" id="branco">
                 <div class="card-item">
                     <div class="card-image">
