imagens dos vinhos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="cards" id="cards"> <!-- Contêiner de cards de produtos em destaque, com id "cards" -->
                     <div class="item"> <!-- Card individual de um produto -->
                         <div class="imagem-card">
-                            <img src="assets/tinto/Destaque-tinto.png" alt="Tinto"> <!-- Imagem do produto em destaque com descrição alternativa "Tinto" -->
+                            <img src="assets/tinto/Tinto.130.png" alt="Tinto"> <!-- Imagem do produto em destaque com descrição alternativa "Tinto" -->
                         </div>
                         <div class="descricao-card" >
                             <h2>Tinto</h2> <!-- Título do card do produto, descrevendo o nome do produto -->
@@ -53,7 +53,7 @@
                     </div>
                     <div class="item"> <!-- Card individual de outro produto em destaque -->
                         <div class="imagem-card">
-                            <img src="assets/rose/Destaque-rose.png" alt="Rose"> <!-- Imagem do produto com descrição alternativa "Rose" -->
+                            <img src="assets/rose/Rose.150.png" alt="Rose"> <!-- Imagem do produto com descrição alternativa "Rose" -->
                         </div>
                         <div class="descricao-card">
                             <h2>Rose</h2> <!-- Título do card do produto -->
@@ -61,7 +61,7 @@
                     </div>
                     <div class="item"> <!-- Card individual para mais um produto em destaque -->
                         <div class="imagem-card">
-                            <img src="assets/branco/Destaque-branco.png" alt="Branco"> <!-- Imagem do produto com descrição alternativa "Branco" -->
+                            <img src="assets/branco/Branco.100.png" alt="Branco"> <!-- Imagem do produto com descrição alternativa "Branco" -->
                         </div>
                         <div class="descricao-card">
                             <h2>Branco</h2> <!-- Título do card do produto -->
@@ -76,27 +76,27 @@
             <div class="card-container" id="tinto"> <!-- Contêiner para produtos da categoria "Tinto", com id "tinto" -->
                 <div class="card-item"> <!-- Card de produto individual na categoria "Tinto" -->
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Tinto"> <!-- Imagem do produto com descrição alternativa "Preto" -->
+                        <img src="assets/tinto/Tinto.130.png" alt="Vinho Tinto"> <!-- Imagem do produto com descrição alternativa "Preto" -->
                     </div>
-                    <h2 class="card-title">Vinho Tinto</h2> <!-- Título do card de produto -->
+                    <h2 class="card-title">Português Herdade</h2> <!-- Título do card de produto -->
                 </div>
                 <div class="card-item"> <!-- Outro card de produto na mesma categoria -->
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Tinto"> <!-- Imagem do produto com descrição alternativa "Preto" -->
+                        <img src="assets/tinto/Tinto.150.png" alt="Vinho Tinto"> <!-- Imagem do produto com descrição alternativa "Preto" -->
                     </div>
-                    <h2 class="card-title">Vinho Tinto</h2><!-- Título do card de produto -->
+                    <h2 class="card-title">Chileno Vistamar EJE</h2><!-- Título do card de produto -->
                 </div>
                 <div class="card-item"> <!-- Outro card de produto na mesma categoria -->
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Tinto"> <!-- Imagem do produto com descrição alternativa "Preto" -->
+                        <img src="assets/tinto/Tinto.180.png" alt="Vinho Tinto"> <!-- Imagem do produto com descrição alternativa "Preto" -->
                     </div>
-                    <h2 class="card-title">Vinho Tinto</h2><!-- Título do card de produto -->
+                    <h2 class="card-title">Português Conto Alentejano</h2><!-- Título do card de produto -->
                 </div>
                 <div class="card-item"> <!-- Outro card de produto na mesma categoria -->
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Tinto">
+                        <img src="assets/tinto/Tinto.90.png" alt="Vinho Tinto">
                     </div>
-                    <h2 class="card-title">Vinho Tinto</h2><!-- Título do card de produto -->
+                    <h2 class="card-title">Português Cartuxa EA</h2><!-- Título do card de produto -->
                 </div>
             </div>      
 
@@ -104,27 +104,27 @@
             <div class="card-container" id="rose">
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
+                        <img src="assets/rose/Rose.150.png" alt="Vinho Rose">
                     </div>
-                    <h2 class="card-title">Vinho Rose</h2>
+                    <h2 class="card-title">Francês Rosé Piscine VDF</h2>
                 </div>
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
+                        <img src="assets/rose/Rose.166.png" alt="Vinho Rose">
                     </div>
-                    <h2 class="card-title">Vinho Rose</h2>
+                    <h2 class="card-title">Chileno Montes Cherub</h2>
                 </div>
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
+                        <img src="assets/rose/Rose.200.png" alt="Vinho Rose">
                     </div>
-                    <h2 class="card-title">Vinho Rose</h2>
+                    <h2 class="card-title">Argentino Catena Malbec</h2>
                 </div>
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Rose">
+                        <img src="assets/rose/Rose.90.png" alt="Vinho Rose">
                     </div>
-                    <h2 class="card-title">Vinho Rose</h2>
+                    <h2 class="card-title">Argentino Cordero Con Piel De Lobo</h2>
                 </div>
             </div>
 
@@ -132,27 +132,27 @@
             <div class="card-container" id="branco">
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Branco">
+                        <img src="assets/branco/Branco.100.png" alt="Vinho Branco">
                     </div>
-                    <h2 class="card-title">Vinho Branco</h2>
+                    <h2 class="card-title">Francês Franc Beausejour</h2>
                 </div>
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Branco">
+                        <img src="assets/branco/Branco.160.png" alt="Vinho Branco">
                     </div>
-                    <h2 class="card-title">Vinho Branco</h2>
+                    <h2 class="card-title">Pandolfi Price Larkun</h2>
                 </div>
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Branco">
+                        <img src="assets/branco/Branco.60.png" alt="Vinho Branco">
                     </div>
-                    <h2 class="card-title">Vinho Branco</h2>
+                    <h2 class="card-title">Italiano Caviro Musiolo Vino</h2>
                 </div>
                 <div class="card-item">
                     <div class="card-image">
-                        <img src="assets/01.png" alt="Vinho Branco">
+                        <img src="assets/branco/Branco.80.png" alt="Vinho Branco">
                     </div>
-                    <h2 class="card-title">Vinho Branco</h2>
+                    <h2 class="card-title">Argentino Norton 1895 Chardonnay</h2>
                 </div>
             </div>
         </section>
