--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="card-image">
                         <img src="assets/rose/Rose.90.png" alt="Vinho Rose">
                     </div>
-                    <h2 class="card-title">Argentino Cordero Con Piel De Lobo</h2>
+                    <h2 class="card-title">Cordero Con Piel De Lobo</h2>
                 </div>
             </div>
 
