--- a/index.html
+++ b/index.html
@@ -2,27 +2,22 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 para suportar caracteres especiais -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Define que a página deve se adaptar ao tamanho da tela -->
-    <link rel="stylesheet" href="playfair.css"> <!-- Importa o arquivo CSS para estilizar fontes Playfair -->
-    <link rel="stylesheet" href="style/styles.css"> <!-- Importa o CSS principal de estilo da página -->
-    <link rel="stylesheet" href="style/avatar.css"> <!-- Importa o CSS para estilizar o avatar do usuário -->
-    <link rel="stylesheet" href="style/fontes.css"> <!-- Importa o CSS para estilizar fontes Roboto -->
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/avatar.css">
+    <link rel="stylesheet" href="style/fontes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- Otimiza a conexão para carregar fontes do Google -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
-        rel="stylesheet"> <!-- Importa a fonte Roboto diretamente do Google Fonts -->
-    <title>Vinhos.net</title> <!-- Define o título da página exibido na aba do navegador -->
-</head>
+        rel="stylesheet"> 
+    <title>Vinhos.net</title>
 
 <body class="roboto-regular">
-    <!-- Início do corpo da página, aplicando a classe "roboto-regular" para estilização com a fonte Roboto -->
     <header class="menu" id="inicio">
         <!-- Define o cabeçalho da página com a classe "menu" e um id "inicio" para âncora -->
         <nav>
+            <h1 class="tangerine-title">Vinhos.net</h1>
             <ul> <!-- Lista não ordenada para os links de navegação do cabeçalho -->
                 <li><a href="#inicio">Início</a></li> <!-- Link âncora para a seção de início da página -->
                 <li><a href="#produtos">Produtos</a></li> <!-- Link âncora para a seção de produtos da página -->
@@ -30,22 +25,23 @@
             </ul>
         </nav>
         <div class="user-area"> <!-- Div que agrupa a área do usuário, incluindo foto e menu de opções -->
+            <!--
             <div class="user-photo">
                 <img src="assets/users/unknownuser.png" alt="Foto de usuário" id="user">
-                <!-- Imagem do usuário com id "user" e uma descrição alternativa -->
             </div>
-            <div class="user-options"> <!-- Div para o menu de opções do usuário -->
+          
+            <div class="user-options">
                 <ul class="user-menu">
                     <li><a href="#">Mais opções</a>
-                        <ul> <!-- Submenu de opções do usuário, com links para login e saída -->
+                        <ul>
                             <li><a href="#" id="log-sin">Logar / Minha conta</a></li>
-                            <!-- Link para a página de login ou conta do usuário -->
-                            <li><a href="#" id="sair">Sair</a></li> <!-- Link para sair da conta do usuário -->
+                            <li><a href="#" id="sair">Sair</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
+          -->
     </header>
 
     <main class="conteudo" id="produtos">
@@ -196,8 +192,16 @@
             <a href="#feedback">Feedback</a> <!-- Link âncora para a seção de feedback -->
         </div>
     </footer>
-    <script src="efeitos.js">
-    </script>
+      <!-- Estrutura do popup -->
+  <div class="popup-overlay" id="popupOverlay">
+    <div class="popup">
+      <h2>Este site é para adultos.</h2>
+      <p>Você deve ser maior de +18 anos para acessar este site.</p>
+      <button id="closePopup">Tenho +18 anos</button>
+      <button id="denyedPopup">Não tenho +18 anos</button>
+    </div>
+  </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
