--- a/index.html
+++ b/index.html
@@ -10,18 +10,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tangerine:wght@400;700&display=swap"
-        rel="stylesheet"> 
+        rel="stylesheet">
     <title>Vinhos.net</title>
 
 <body class="roboto-regular">
     <header class="menu" id="inicio">
         <!-- Define o cabeçalho da página com a classe "menu" e um id "inicio" para âncora -->
         <nav>
-            <h1 class="tangerine-title">Vinhos.net</h1>
+            <h1 class="tangerine-title"><a href="index.html" class="link-remove">Vinhos.net</a></h1>
             <ul> <!-- Lista não ordenada para os links de navegação do cabeçalho -->
-                <li><a href="#inicio">Início</a></li> <!-- Link âncora para a seção de início da página -->
-                <li><a href="#produtos">Produtos</a></li> <!-- Link âncora para a seção de produtos da página -->
-                <li><a href="#contato">Contato</a></li> <!-- Link âncora para a seção de contato da página -->
+                <li><a href="#inicio">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-house-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
+                            <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
+                        </svg>
+                        Início</a></li> <!-- Link âncora para a seção de início da página -->
+                <li><a href="#meio">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-basket-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M5.071 1.243a.5.5 0 0 1 .858.514L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 6h1.717zM3.5 10.5a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0z" />
+                        </svg>
+                        Produtos</a></li> <!-- Link âncora para a seção de produtos da página -->
+                <li><a href="#contato">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                        </svg>
+                        Contato</a></li> <!-- Link âncora para a seção de contato da página -->
             </ul>
         </nav>
         <div class="user-area"> <!-- Div que agrupa a área do usuário, incluindo foto e menu de opções -->
@@ -81,7 +100,7 @@
             </section>
         </div>
 
-        <section class="produtos-gerais"> <!-- Seção contendo produtos gerais organizados em categorias -->
+        <section class="produtos-gerais" id="meio"> <!-- Seção contendo produtos gerais organizados em categorias -->
             <h1 class="titulo-categoria tangerine underline-tinto" id="padding-corretor">Vinhos Tinto</h1>
             <div class="card-container" id="tinto">
                 <!-- Contêiner para produtos da categoria "Tinto", com id "tinto" -->
@@ -181,26 +200,26 @@
         </div>
         <div> <!-- Bloco de links úteis -->
             <h3>Links Úteis</h3> <!-- Título da seção de links úteis -->
-            <a href="#sobre">Sobre Nós</a> <!-- Link âncora para a seção "Sobre Nós" -->
+            <a href="sobre.html">Sobre Nós</a> <!-- Link âncora para a seção "Sobre Nós" -->
             <a href="#servicos">Serviços</a> <!-- Link âncora para a seção "Serviços" -->
-            <a href="#faq">FAQ</a> <!-- Link âncora para a seção "FAQ" -->
+            <a href="FAQ.html">FAQ</a> <!-- Link âncora para a seção "FAQ" -->
         </div>
         <div> <!-- Bloco de links de contato e suporte -->
             <h3>Contate-nos</h3> <!-- Título da seção de suporte -->
-            <a href="#formulario">Formulário de Contato</a> <!-- Link âncora para o formulário de contato -->
-            <a href="#suporte">Suporte</a> <!-- Link âncora para a seção de suporte -->
-            <a href="#feedback">Feedback</a> <!-- Link âncora para a seção de feedback -->
+            <a href="formulario-contato.html">Formulário de Contato</a> <!-- Link âncora para o formulário de contato -->
+            <a href="mailto:suporte@vinhos.net">Suporte</a> <!-- Link âncora para a seção de suporte -->
+            <a href="feedback.html">Feedback</a> <!-- Link âncora para a seção de feedback -->
         </div>
     </footer>
-      <!-- Estrutura do popup -->
-  <div class="popup-overlay" id="popupOverlay">
-    <div class="popup">
-      <h2>Este site é para adultos.</h2>
-      <p>Você deve ser maior de +18 anos para acessar este site.</p>
-      <button id="closePopup">Tenho +18 anos</button>
-      <button id="denyedPopup">Não tenho +18 anos</button>
+    <!-- Estrutura do popup -->
+    <div class="popup-overlay" id="popupOverlay">
+        <div class="popup">
+            <h2>Este site é para adultos.</h2>
+            <p>Você deve ser maior de +18 anos para acessar este site.</p>
+            <button id="closePopup">Tenho +18 anos</button>
+            <button id="denyedPopup">Não tenho +18 anos</button>
+        </div>
     </div>
-  </div>
     <script src="script.js"></script>
 </body>
 
