--- a/sobre.html
+++ b/sobre.html
@@ -159,8 +159,7 @@
                             <h2>Miguel Coimbra</h2>
                             <img src="assets/imagem/miguel.jpg" class="foto-integrante">
                             <p><strong>Designer Gráfico</strong></p>
-                            <p>Miguel dá vida aos conceitos com seu talento criativo.<strong><a href="jogar/jogo.html"
-                                        class="link-remove" style="color:black">jogar</a></strong> Ele é o responsável
+                            <p>Miguel dá vida aos conceitos com seu talento criativo.Ele é o responsável
                                 por criar
                                 designs visuais impactantes, desde logotipos até materiais promocionais, garantindo que
                                 cada projeto tenha uma identidade visual marcante.</p><br>
